Revert "Fix: remove z-index from background"
This reverts commit c511763f6bab913ad4196646a53fba1f36e20f57.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -88,6 +88,7 @@ header::before {
   position: absolute;
   top: 0;
   right: 0;
+  z-index: -200;
 
   display: block;
 
